# lambda-language-performance-test

./: .env.aws  .gitignore  app.py  log_output.txt  retrieve_logs.py  setup.py
lambda_code/go/: go.mod  go.sum  main.go
lambda_code/layer/: countries.json  generate_json.py  make_models.json  test_data_10000.json
lambda_code/python/: index.py
lambda_code/rust/: Cargo.toml
lambda_code/rust/src/: main.rs
lambda_language_performance_test/: lambda_language_performance_test_stack.py
