[package]
name = "rust_performance_test"
version = "0.1.0"
authors = ["Luc van Donkersgoed <lucvandonkersgoed@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "^0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
sha2 = "0.9.3"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
